--- a/Basic_RabbitMQ/src/main/resources/application.properties
+++ b/Basic_RabbitMQ/src/main/resources/application.properties
@@ -1,10 +1,13 @@
+# 本地服务端口配置
 server.port=8081
 
+# 本地RabbitMQ地址以及账户配置，其中guest为默认自带用户名密码
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
+# spring cloud stream 绑定设置，设置一个名为dev-exchange的队列
 spring.cloud.stream.bindings.dev-exchange.destination=dev-exchange
 spring.cloud.stream.bindings.dev-exchange.group=dev-queue
 spring.cloud.stream.bindings.dev-exchange.content-type=application/json
